--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "cra-template": "1.2.0",
     "d3": "^7.9.0",
     "framer-motion": "^12.4.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.474.0",
     "motion": "^12.4.2",
